Cherry-pick 348b1a10ee87. rdar://problem/92449950

[CSS Cascade Layers] Endless recursion with revert-layer in other tree context
    https://bugs.webkit.org/show_bug.cgi?id=239967
    <rdar://92449950>

    Reviewed by Alan Bujtas.

    Source/WebCore:

    We should only revert within a tree context (scope).

    Adding more comprehensive WPTs separately.

    Test: fast/css/revert-layer-tree-context-stack-overflow.html

    * style/PropertyCascade.cpp:
    (WebCore::Style::PropertyCascade::PropertyCascade):

    Pass the property tree scope to the rollback cascade.

    (WebCore::Style::PropertyCascade::addMatch):

    Don't include properties from lower priority tree scopes to rollback cascade.
    Reverse the logic for clarity.

    * style/PropertyCascade.h:
    (WebCore::Style::PropertyCascade::PropertyCascade):
    * style/StyleBuilder.cpp:
    (WebCore::Style::Builder::ensureRollbackCascadeForRevert):
    (WebCore::Style::Builder::ensureRollbackCascadeForRevertLayer):
    (WebCore::Style::Builder::makeRollbackCascadeKey):

    Include tree scope to the key.

    * style/StyleBuilder.h:

    LayoutTests:

    * fast/css/revert-layer-tree-context-stack-overflow-expected.html: Added.
    * fast/css/revert-layer-tree-context-stack-overflow.html: Added.

    Canonical link: https://commits.webkit.org/250213@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293725 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.637@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@295308 268f45cc-cd09-0410-ab3c-d52691b4dbfc